Update to LWJGL Snapshot
Use 3..30 and other minor changes